# bandwagon-vps-info

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: main.rs  server.rs  statics.rs
templates/: info-page.html
